--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+				<meta name="robots" content="noindex">
 				<meta charset="UTF-8">
 				<title>Page title</title>
 				<link rel="preconnect" href="https://fonts.googleapis.com">
