--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 				<meta name="robots" content="noindex">
+				<link rel="manifest" href="manifest.json">
 				<meta charset="UTF-8">
 				<title>Page title</title>
 				<link rel="preconnect" href="https://fonts.googleapis.com">
