--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 				    font-size: 172px;
 				}
 </style>
-<script defer>
-				document.documentElement.webkitRequestFullScreen();
-</script>
+<script src="src/index.js" ></script>
 </head>
 <body>
 				Symphony
+<hr />
+<x-fetch path="https://api.genius.com/search?q=symphony"
+headers='{"Authorization": "Bearer AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"}'
+/>
 </body>
 </html>
