--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-				<meta name="robots" content="noindex">
-				<link rel="manifest" href="manifest.json">
-				<meta charset="UTF-8">
-				<title>Page title</title>
-				<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
-<style>
-				:root {
-				    font-family: 'Dosis';
-				    background-color: black;
-				    color: white;
-				    font-size: 172px;
-				}
-</style>
-<script src="src/index.js" ></script>
-</head>
-<body>
-				Symphony
-<hr />
-<x-fetch path="https://api.genius.com/search?q=symphony"
-headers='{"Authorization": "Bearer AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"}'
-/>
-</body>
+  <head>
+    <meta name="robots" content="noindex" />
+    <link rel="manifest" href="manifest.json" />
+    <meta charset="UTF-8" />
+    <title>Page title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      :root {
+        font-family: "Dosis";
+        background-color: black;
+        color: white;
+        font-size: 172px;
+      }
+    </style>
+    <script src="src/index.js"></script>
+  </head>
+  <body>
+    Symphony
+    <hr />
+    <x-fetch
+      path="https://api.genius.com/search?q=symphony"
+      headers='{"Authorization": "Bearer AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"}'
+    />
+  </body>
 </html>
