--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     Symphony
     <hr />
     <x-fetch
-      path="https://api.genius.com/search?q=symphony"
-      headers='{"Authorization": "Bearer AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"}'
+      path="https://api.genius.com/search?q=symphony&access_token=AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"
     />
   </body>
 </html>
