--- a/index.html
+++ b/index.html
@@ -3,29 +3,39 @@
   <head>
     <meta name="robots" content="noindex" />
     <link rel="manifest" href="manifest.json" />
+
     <meta charset="UTF-8" />
     <title>Page title</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      :root {
-        font-family: "Dosis";
-        background-color: black;
-        color: white;
-        font-size: 172px;
-      }
-    </style>
-    <script src="src/index.js"></script>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    
+    <script src="dist/index.js"></script>
   </head>
   <body>
-    Symphony
-    <hr />
-    <x-fetch
-      path="https://api.genius.com/search?q=symphony&access_token=AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"
+    <x-data
+      base="https://api.genius.com"
+      path="/search?q=symphon'y"
+      query="access_token=AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"
+      meta='{ 
+        "response": {
+          "hits": { 
+            "result": { 
+              "header_image_url": "image",
+              "api_path": "bla" 
+            } 
+          },
+          "song": {
+            "description_annotation": {
+              "annotations": {
+                "api_path": "bla"
+              }
+            }
+          }
+        } 
+      }'
     />
+    <!-- bootstrap js -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
 </html>
