--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="robots" content="noindex" />
-    <link rel="manifest" href="manifest.json" />
+    <head>
+        <meta name="robots" content="noindex" />
+        <link rel="manifest" href="manifest.json" />
 
-    <meta charset="UTF-8" />
-    <title>Page title</title>
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">  
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    
-    <script src="dist/index.js"></script>
-  </head>
-  <body>
-    <x-data
-      base="https://api.genius.com"
-      path="/search?q=symphon'y"
-      query="access_token=AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"
-      meta='{ 
+        <meta charset="UTF-8" />
+        <title>Page title</title>
+        <!-- bootstrap -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+            crossorigin="anonymous" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+
+        <script src="dist/index.js" type="module"></script>
+    </head>
+    <body>
+        <x-data
+            base="https://api.genius.com"
+            path="/search?q=symphon'y"
+            query="access_token=AV67l_fnu9Di0EUAJLo94cBu3SBrNwh-RF50f4mfcyUaXW_uiXc6qqz4AWVY-zvH"
+            meta='{ 
         "response": {
           "hits": { 
             "result": { 
@@ -33,9 +39,11 @@
             }
           }
         } 
-      }'
-    />
-    <!-- bootstrap js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-  </body>
+      }' />
+        <!-- bootstrap js -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+            crossorigin="anonymous"></script>
+    </body>
 </html>
